--- a/starter/app/src/debug/res/values/google_maps_api.xml
+++ b/starter/app/src/debug/res/values/google_maps_api.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAnXmfvqqG2bHuAr_4IKnh_XEx16zpnyio</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR_KEY_HERE</string>
 </resources>
